force-app/main/default/objects/Feature__c/Feature__c.object-meta.xml
<CustomObject>
    <label>Feature Adoption</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Adoptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>