force-app/main/default/objects/Feature__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>APIName</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>