force-app/main/default/objects/Feature__c/fields/AverageScore__c.field-meta.xml
<CustomField>
    <fullName>AverageScore__c</fullName>
    <label>Average Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>