force-app/main/default/objects/Feature__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <label>Users</label>
    <summaryForeignKey>FeatureFeedback__c.Feature__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>