force-app/main/default/objects/Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AverageScore__c</columns>
    <columns>Users__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>